--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,8 +11,8 @@ jobs:
   test:
     env:
       MONGODB_CLUSTER_ADDRESS: cluster0.ymp5di9.mongodb.net #available only in this job
-      MONGODB_USERNAME: margan10
-      MONGODB_PASSWORD: 9YxhWOjjk8xTKJxj
+      MONGODB_USERNAME: ${{secrets.MONGODB_USERNAME}} #available only in this job
+      MONGODB_PASSWORD: ${{secrets.MONGODB_PASSWORD}} #available only in this job
       PORT: 8080
     environment: testing
     runs-on: ubuntu-latest
